MDEV-13802 mariabackup --lock-ddl-per-table fails when table names contain backticks

use ut_get_name() for formatting database/table names.