extra/mariabackup/xtrabackup.cc
@@ -1148,17 +1148,12 @@ static void append_export_table(const char *dbname, const char *tablename, bool 
   if(dbname && tablename && !is_remote)
   {
     char buf[3*FN_REFLEN];
-    char db_utf8[FN_REFLEN];
-    char table_utf8[FN_REFLEN];
-
     snprintf(buf,sizeof(buf),"%s/%s",dbname, tablename);
     // trim .ibd
     char *p=strrchr(buf, '.');
     if (p) *p=0;
 
-    dict_fs2utf8(buf, db_utf8, sizeof(db_utf8),table_utf8,sizeof(table_utf8));
-    snprintf(buf,sizeof(buf),"`%s`.`%s`",db_utf8,table_utf8);
-    tables_for_export.push_back(buf);
+    tables_for_export.push_back(ut_get_name(0,buf));
   }
 }
 
@@ -2753,6 +2748,7 @@ static dberr_t enumerate_ibd_files(process_single_tablespace_func_t callback)
 	os_file_stat_t	dbinfo;
 	os_file_stat_t	fileinfo;
 	dberr_t		err		= DB_SUCCESS;
+	size_t len;
 
 	/* The datadir of MySQL is always the default directory of mysqld */
 
@@ -2792,7 +2788,7 @@ static dberr_t enumerate_ibd_files(process_single_tablespace_func_t callback)
 		/* We found a symlink or a directory; try opening it to see
 		if a symlink is a directory */
 
-		size_t len = strlen(fil_path_to_mysql_datadir)
+		len = strlen(fil_path_to_mysql_datadir)
 			+ strlen (dbinfo.name) + 2;
 		if (len > dbpath_len) {
 			dbpath_len = len;
@@ -2832,10 +2828,8 @@ static dberr_t enumerate_ibd_files(process_single_tablespace_func_t callback)
 					continue;
 				}
 
-				size_t len = strlen(fileinfo.name);
-
 				/* We found a symlink or a file */
-				if (len > 4) {
+				if (strlen(fileinfo.name) > 4) {
 					bool is_isl= false;
 					if (ends_with(fileinfo.name, ".ibd") || ((is_isl = ends_with(fileinfo.name, ".ibd"))))
 						(*callback)(dbinfo.name, fileinfo.name, is_isl);
